yaml/alloy-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: alloy
spec:
  ports:
    - port: 12345
      targetPort: 12345
      name: http
    - port: 4317
      targetPort: 4317
      name: otlp-grpc
    - port: 4318
      targetPort: 4318
      name: otlp-http
  selector:
    app: alloy
