yaml/demo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: monitoring
  name: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-app
        image: otel/demo:latest-quote
        ports:
        - containerPort: 8090
          name: http
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: demo-app
spec:
  selector:
    app: demo-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8090
