yaml/demo-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: monitoring
  name: demo-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-nginx
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
      labels:
        app: demo-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: http
      - name: nginx-exporter
        image: nginx/nginx-prometheus-exporter:latest
        args:
          - -nginx.scrape-uri=http://localhost/stub_status
        ports:
        - containerPort: 9113
          name: metrics
---
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: demo-nginx
spec:
  selector:
    app: demo-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
