yaml/kube-state-metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: monitoring
  name: kube-state-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-state-metrics
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: kube-state-metrics
    spec:
      serviceAccountName: kube-state-metrics
      containers:
        - name: kube-state-metrics
          image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.12.0
          ports:
            - containerPort: 8080
              name: metrics
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: kube-state-metrics
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: metrics
  selector:
    app: kube-state-metrics
