yaml/tempo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: monitoring
  name: tempo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tempo
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3200"
      labels:
        app: tempo
    spec:
      containers:
        - name: tempo
          image: grafana/tempo:2.4.1
          args:
            - "-config.file=/etc/tempo/tempo.yaml"
            - "-target=all"
          ports:
            - containerPort: 3200
              name: http
            - containerPort: 4317
              name: otlp-grpc
            - containerPort: 4318
              name: otlp-http
          volumeMounts:
            - name: config
              mountPath: /etc/tempo
            - name: storage
              mountPath: /var/tempo
      volumes:
        - name: config
          configMap:
            name: tempo-config
        - name: storage
          persistentVolumeClaim:
            claimName: tempo-pvc
---
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: tempo
spec:
  ports:
    - port: 3200
      targetPort: 3200
      name: http
    - port: 4317
      targetPort: 4317
      name: otlp-grpc
    - port: 4318
      targetPort: 4318
      name: otlp-http
  selector:
    app: tempo
