yaml/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: monitoring
  name: allow-prometheus-ingress
spec:
  podSelector:
    matchLabels:
      app: prometheus
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: alloy
        - podSelector:
            matchLabels:
              app: grafana
        - podSelector:
            matchLabels:
              app: tempo
      ports:
        - protocol: TCP
          port: 9090
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: monitoring
  name: allow-loki-ingress
spec:
  podSelector:
    matchLabels:
      app: loki
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: alloy
        - podSelector:
            matchLabels:
              app: grafana
      ports:
        - protocol: TCP
          port: 3100
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: monitoring
  name: allow-tempo-ingress
spec:
  podSelector:
    matchLabels:
      app: tempo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: alloy
        - podSelector:
            matchLabels:
              app: grafana
      ports:
        - protocol: TCP
          port: 3200
        - protocol: TCP
          port: 4317
        - protocol: TCP
          port: 4318
